fix bug: flex pre-tag overflow

--- a/source/css/content-outer.css
+++ b/source/css/content-outer.css
@@ -10,7 +10,7 @@
 
 #recent-posts-box {
 	flex: 8;
-	/*background-color: pink;*/
+	overflow: auto;
 }
 
 #sidebar {
